# AI-Projects

./: .gitignore  AI QA Tool.docx  INSTALLATION-README.md  LICENSE  README.md  demo.py  install-java-maven.bat  install-java-maven.ps1  solution.yaml
api/restassured/src/test/java/base/: ApiTest.java
api/restassured/src/test/java/specs/: CreatetransferTest.java  GeneratedTests.java  GetaccountTest.java  GetaccountbalanceTest.java  GetaccountsTest.java  GethealthTest.java  GettransactionsTest.java  GettransferTest.java  LoginTest.java  LogoutTest.java
api/restassured/src/test/resources/: application.properties
backend/pytest/: conftest.py  pyproject.toml  requirements.txt
backend/pytest/tests/: test_database.py  test_health.py
ci/: Jenkinsfile
docs/: README.md  stories.md
specs/: api.yaml
tools/agent/: main.py  requirements.txt
tools/agent/generators/: __init__.py  openapi_to_tests.py  story_to_tests.py  utils.py
tools/agent/templates/ci/: Jenkinsfile.j2  azure-pipelines.yaml.j2
tools/agent/templates/docs/: README.md.j2
tools/agent/templates/playwright/: DashboardPage.ts.j2  LoginPage.ts.j2  data.ts.j2  login.spec.ts.j2  package.json.j2  playwright.config.ts.j2  smoke.spec.ts.j2  spec.spec.ts.j2  tsconfig.json.j2
tools/agent/templates/pytest/: conftest.py.j2  pyproject.toml.j2  requirements.txt.j2  test_database.py.j2  test_health.py.j2
tools/agent/templates/restassured/: ApiTest.java.j2  GeneratedTests.java.j2  OperationTest.java.j2  application.properties.j2  pom.xml.j2
ui/playwright/: playwright.config.ts
ui/playwright/src/pages/: DashboardPage.ts  LoginPage.ts
ui/playwright/tests/: login.spec.ts  smoke.spec.ts
ui/playwright/tests/utils/: data.ts
